# apple-calendar-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
src/apple_calendar_mcp/: __init__.py  caldav_client.py  http_server.py  server.py
