[project]
name = "apple-calendar-mcp"
version = "0.1.0"
description = "MCP connector for Apple Calendar (iCloud) over CalDAV — mirrors the Google Calendar connector tool surface"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "caldav>=1.3.9",
    "icalendar>=5.0.11",
    "vobject>=0.9.7",
    "python-dateutil>=2.8.2",
    "tzdata>=2024.1",
]

[project.scripts]
apple-calendar-mcp = "apple_calendar_mcp.server:main"
apple-calendar-mcp-http = "apple_calendar_mcp.http_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_calendar_mcp"]
